# primedit

./: .travis.yml  CMakeLists.txt  README.md  Untitled Diagram.drawio
lib/: document.h  editor.h  primitive.h
src/: main.cpp
